# bug_reports

./: README.md
mkdocs-awesome-pages-plugin/: README.md
mkdocs-awesome-pages-plugin/issue_16/: Makefile  README.md  mkdocs.yml  pyproject.toml
mkdocs-awesome-pages-plugin/issue_16/docs/how_to_guides/: .pages  setting_up_a_dev_environment.md
mkdocs-awesome-pages-plugin/issue_16/docs/tutorials/: first_steps.md
mkdocs-awesome-pages-plugin/issue_16/dummy_python_module/dummy_python_module/: __init__.py  foo.py
mkdocs-awesome-pages-plugin/issue_17/: README.md  mkdocs.yml  pyproject.toml
mkdocs-awesome-pages-plugin/issue_17/docs/: .pages  index.md
mkdocs-awesome-pages-plugin/issue_17/docs/how_to_guides/: running_the_tests.md
mkdocs-awesome-pages-plugin/issue_17/dummy_python_module/: setup.py
